User menu z-index fixed

--- a/theme/sass/_layout.scss
+++ b/theme/sass/_layout.scss
@@ -38,7 +38,7 @@ body {
   position:relative;
 }
 
-ul.RightMenu { margin:0; padding:0; position:absolute; right:0; z-index:10 }
+ul.RightMenu { margin:0; padding:0; position:absolute; right:0; z-index:50 }
 ul.RightMenu > li { list-style:none; display:inline-block; vertical-align:top; margin:0; padding:0; float: left; }
 ul.RightMenu button { font-size:12px !important }
 
